--- a/p/index.html
+++ b/p/index.html
@@ -1,6 +1,7 @@
---- 
+---
 layout: presentations
 title: Sunumlar
-presentations: 
+presentations:
 - p/chef-client
+- p/ruby-database-backup-whenever
 ---
