chef-nedir sunumunu düzenle

--- a/p/chef-nedir/index.html
+++ b/p/chef-nedir/index.html
@@ -1748,9 +1748,9 @@ _gaq.push(['_trackPageview']);
 </ul>
 <p>Ör: nginx kurulumu, rails sunucu kurulumu vb...</p>
 <ul>
-<li>İstenilen sunucuların hepsinde, aynı işlemi tek bir kod'la yapmak mümkündür.</li>
+<li>İstenilen sunucuların <strong>hepsinde</strong>, aynı işlemi tek bir kod'la yapmak mümkündür.</li>
 </ul>
-<p>Ör: Sunucu güncelleştirmeleri, önemli bir paket kurulumu vs ...</p></section>
+<p>Ör: Sistem saatinin 1 saniye ileri alınması, sunucu güncelleştirmeleri, önemli bir paket kurulumu vs ...</p></section>
             
           </div>
           <div class="presenter_notes">
