--- a/p/index.html
+++ b/p/index.html
@@ -2,7 +2,7 @@
 layout: presentations
 title: Sunumlar
 presentations:
-- p/chef-client
 - p/chef-nedir
+- p/chef-server-client
 - p/ruby-database-backup-whenever
 ---
