dns sorgusu nasıl yapılır.

--- a/p/index.html
+++ b/p/index.html
@@ -4,5 +4,6 @@ title: Sunumlar
 presentations:
 - p/chef-nedir
 - p/chef-server-client
+- p/dns-sorgusu-nasil
 - p/ruby-database-backup-whenever
 ---
