avahş daemon nedir yazısını ekle.

--- a/p/index.html
+++ b/p/index.html
@@ -2,6 +2,7 @@
 layout: presentations
 title: Sunumlar
 presentations:
+- p/avahi-daemon-nedir
 - p/chef-nedir
 - p/chef-server-client
 - p/dns-sorgusu-nasil
