komut satırı kaydetme

--- a/p/index.html
+++ b/p/index.html
@@ -6,5 +6,6 @@ presentations:
 - p/chef-nedir
 - p/chef-server-client
 - p/dns-sorgusu-nasil
+- p/komut-satirini-kaydetme-ve-paylasma
 - p/ruby-database-backup-whenever
 ---
